// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseFoKParams > accepts the retry duration in 0 minutes 1`] = `
{
  "maxOraclePriceSlippage": 50,
  "minPriceX128": "83892489958826316385497263710123985244108278726772",
  "refundAddress": "0x1234",
  "refundCcmMetadata": null,
  "retryDurationBlocks": 0,
}
`;

exports[`parseFoKParams > accepts the retry duration in 0.5 minutes 1`] = `
{
  "maxOraclePriceSlippage": 50,
  "minPriceX128": "83892489958826316385497263710123985244108278726772",
  "refundAddress": "0x1234",
  "refundCcmMetadata": null,
  "retryDurationBlocks": 5,
}
`;

exports[`parseFoKParams > accepts the retry duration in 0.25 minutes 1`] = `
{
  "maxOraclePriceSlippage": 50,
  "minPriceX128": "83892489958826316385497263710123985244108278726772",
  "refundAddress": "0x1234",
  "refundCcmMetadata": null,
  "retryDurationBlocks": 3,
}
`;

exports[`parseFoKParams > accepts the retry duration in 1 minutes 1`] = `
{
  "maxOraclePriceSlippage": 50,
  "minPriceX128": "83892489958826316385497263710123985244108278726772",
  "refundAddress": "0x1234",
  "refundCcmMetadata": null,
  "retryDurationBlocks": 10,
}
`;

exports[`parseFoKParams > accepts the retry duration in 10 minutes 1`] = `
{
  "maxOraclePriceSlippage": 50,
  "minPriceX128": "83892489958826316385497263710123985244108278726772",
  "refundAddress": "0x1234",
  "refundCcmMetadata": null,
  "retryDurationBlocks": 100,
}
`;
